fixed overflow problem of navbar appearing always

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .no-scroll {
